<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="app_sharing">Поделиться приложением</string>
    <string name="dark_theme">Темная тема</string>
    <string name="support_chat">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_dev_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email">xden15ka359@yandex.ru</string>
    <string name="support_mail_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_body_content">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found_error_text">Ничего не нашлось</string>
    <string name="internet_error_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year"> Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="emptyMediaText">Ваша медиатека пуста</string>
    <string name="emptyPlaylistsText">Вы не создали  ни одного плейлиста</string>
    <string name="createNewPlaylistText">Новый плейлист</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="is_create_playlist_finished">Завершить создание плейлиста?</string>
    <string name="all_not_saved_changes_will_lost">Все несохраненные данные будут потеряны</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="musicPlaybackNotifications">Music playback notifications</string>
    <string name="musicPlayerChannel">music_player_channel</string>
    <string name="musicPlayer">Music Player</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>