<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_create_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/whiteToBlackRussian">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/parentLeftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/parentRightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/arrow_back"
                app:title="@string/createNewPlaylistText"
                app:titleTextColor="?attr/blackRussianToWhite"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/playlistImageCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <ImageView
                    android:id="@+id/playlistImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/playlist_image_empty" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/input_field_colors_box_stroke"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/input_field_colors_hint"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/playlistImageCard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_playlist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:autofillHints="title"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlistDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/input_field_colors_box_stroke"
                app:boxStrokeWidth="1dp"
                app:hintTextColor="@color/input_field_colors_hint"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/playlistName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_playlist_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:autofillHints="title"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/aluminium_snow_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/parentRightBorder"
        app:layout_constraintStart_toEndOf="@id/parentLeftBorder" />
</androidx.constraintlayout.widget.ConstraintLayout>
